--- a/css/style.css
+++ b/css/style.css
@@ -440,7 +440,7 @@ html {
 body {
 	font-size : 13pt;
 	font-family : "Trebuchet MS", Arial, sans-serif;
-    overflow: hidden;
+  overflow: hidden;
 }
 
 h2 {
@@ -452,15 +452,26 @@ section{
 	position: fixed;
 	width: 100%;
 	height: 100%;
+  background-color: black;
+  background-position: bottom center;
+  background-repeat: no-repeat;
 }
 
+#bg{
+  position: fixed;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 #status {
 	position : absolute;
 	top : 0px;
 	width : 100%;
 	text-align : center;
 	border-bottom : 1px solid lightGray;
-	background-color: #0A96A7;
+	background: url(../img/wall.jpg);
+  background-size: 10%;
+  background-repeat: repeat;
 	z-index: 100000;
 }
 
@@ -475,23 +486,38 @@ section{
 	border-left : none;
 }
 
-.section {
+.section{
+  color: lightGray;
+  text-align: justify;
 	position: relative;
 	padding : 10px;
 	margin : auto;
 	max-width : 600px;
-	border : 1px solid lightGray;
+  background: url(../img/panel3.jpg);
+  border: solid 1px lightgrey; 
+  background-size: 20%;
+  background-repeat: repeat;
+}
+
+#battlezone{
+  position: fixed;
+  padding : 10px;
+  margin : auto;
+  max-width : 200px;
+  border : 1px solid lightGray;
+  z-index: 10000000;
+  background-color: #000000;
 }
 
 .section button {
 	display : block;
 	width : 100%;
-	color : #00305D;
+	color : #700000;
 	text-decoration : none;
 	padding : 5px;
 	margin-top : 30px;
 	background : lightGray;
-	border : none;
+  border: 1px lightgrey solid;
 	cursor : pointer;
 }
 .section button+button{
@@ -500,13 +526,115 @@ section{
 
 .section button:hover {
 	color : lightGray;
-	background-color : #00305D;
-}
-
-.battle {
-	padding : 10px 10px;
-	margin : 20px 0px;
-	box-shadow : 0px 2px 8px gray;
+	background-color : #700000;
+  border: 1px lightgrey solid;
 }
 
 
+
+#inventaire{
+  position: absolute;
+  left: 0px;
+  padding : 10px 20px;
+  color : white;
+  border-left : 1px solid lightGray;
+  border-right : 1px solid lightGray;
+  cursor: pointer;
+  background-color: black;
+}
+
+.panel{
+  position: fixed;
+  top: 42px;
+  z-index: 100000;
+  width: 300px;
+  height: 100%;
+  background: url(../img/panel3.jpg);
+  border-right: solid 1px lightgrey; 
+  background-size: 40%;
+  background-repeat: repeat;
+  color: white;
+  padding: 20px 10px 30px;
+  margin: 0;
+}
+
+.panel ul, .panel span{
+  display: block;
+  padding: 0px;
+  margin:  0px;
+  clear: both;
+}
+
+.panel span{
+  line-height: 30px;
+}
+
+.panel ul li, key{
+  float: left;
+  list-style: none;
+  background-color: #777777;
+  width: 50px;
+  height: 50px;
+  border: 1px lightGray solid;
+  /*padding: 10px;*/
+  margin: 0;
+  cursor: pointer;
+}
+
+.panel ul li img{
+  width: 50px;
+  height: 50px;
+}
+
+.panel ul li:hover{
+  background-color: #555555;
+}
+
+.panel ul key:hover{
+  border-color: #999999;
+  background-color: #765432;
+}
+
+
+#battlezone ul{
+  display: block;
+  padding: 0px;
+  margin:  0px;
+  color: lightgrey;
+  clear: both;
+}
+
+.monster{
+  display: block;
+  list-style: none;
+  background-color: #999999;
+  border: 1px lightGray solid;
+  padding: 10px;
+  margin: 3px 0px;
+}
+
+.monster img{
+  background-color: #333333;
+  display: inline-block;
+  width: 70px;
+  height: 70px;
+}
+
+#life{
+  width: 100%;
+  height: 2px;
+  background-color: red;
+}
+
+.hit{
+  float: right;
+  padding: 5px 10px;
+  background-color: #555555;
+  color: lightgrey;
+  cursor: pointer;
+}
+
+.hit:hover{
+  background-color: #333333;
+  color: lightgrey;
+}
