--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,15 @@
  * 2. Prevent iOS text size adjust after orientation change, without disabling
  *    user zoom.
  */
+@font-face {
+    font-family: medieval;
+    src: url(../fonts/Ruritania.ttf);
+}
+@font-face {
+    font-family: medieval-out;
+    src: url(../fonts/Ruritania-outline.ttf);
+}
+
 
 html {
   font-family: sans-serif; /* 1 */
@@ -438,14 +447,14 @@ html {
 }
 
 body {
-	font-size : 13pt;
-	font-family : "Trebuchet MS", Arial, sans-serif;
+	font-size: 13pt;
+	font-family: "Trebuchet MS", Arial, sans-serif;
   overflow: hidden;
 }
 
 h2 {
-	margin-top : 0px;
-	font-weight : bold;
+	margin-top: 0px;
+	font-weight: bold;
 }
 
 #map{
@@ -453,14 +462,12 @@ h2 {
   z-index: 1000000;
   top: 50px;
   right: 5px;
-  width: 314px;
-  height: 250px;
-  border: solid 1px lightgrey;
 }
 
 #map img{
-  height: inherit;
-  width: inherit;
+  width: 314px;
+  height: 250px;
+  border: solid 1px lightgrey;
 }
 
 section{
@@ -468,7 +475,7 @@ section{
 	width: 100%;
 	height: 100%;
   background-color: black;
-  background-position: bottom center;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
@@ -479,11 +486,11 @@ section{
   height: 100%;
 }
 #status {
-	position : absolute;
-	top : 0px;
-	width : 100%;
-	text-align : center;
-	border-bottom : 1px solid lightGray;
+	position: absolute;
+	top: 0px;
+	width: 100%;
+	text-align: center;
+	border-bottom: 1px solid lightGray;
   background-color: #000000;
 	/*background: url(../img/bg/wall.jpg);
   background-size: 10%;
@@ -492,14 +499,14 @@ section{
 }
 
 #status div {
-	display : inline-block;
-	padding : 10px 20px;
-	color : white;
-	border-left : 1px solid lightGray;
-	border-right : 1px solid lightGray;
+	display: inline-block;
+	padding: 10px 20px;
+	color: white;
+	border-left: 1px solid lightGray;
+	border-right: 1px solid lightGray;
 }
 #status div+div {
-	border-left : none;
+	border-left: none;
 }
 
 .section{
@@ -507,9 +514,9 @@ section{
   text-align: justify;
 	position: relative;
   top: 50px;
-	padding : 10px;
-	margin : auto;
-	max-width : 600px;
+	padding: 10px;
+	margin: auto;
+	max-width: 600px;
   background: url(../img/bg/panel3.jpg);
   border: solid 1px lightgrey; 
   background-size: 20%;
@@ -518,10 +525,10 @@ section{
 
 #battlezone{
   position: fixed;
-  top : 310px;
-  right : 5px;
-  width : 250px;
-  border : 1px solid lightGray;
+  top: 310px;
+  right: 5px;
+  width: 314px;
+  border: 1px solid lightGray;
   z-index: 10000000;
   background-color: #000000;
 }
@@ -530,36 +537,77 @@ section{
   padding: 10px;
 }
 
-.section button {
-	display : block;
-	width : 100%;
-	color : #700000;
-	text-decoration : none;
-	padding : 5px;
-	margin-top : 30px;
-	background : lightGray;
+.section button, #resume{
+	display: block;
+	width: 100%;
+	color: #700000;
+	text-decoration: none;
+	padding: 5px;
+	margin-top: 30px;
+	background: lightGray;
   border: 1px lightgrey solid;
-	cursor : pointer;
+	cursor: pointer;
+  max-width: 600px;
 }
 .section button+button{
-	margin-top : 10px;
+	margin-top: 10px;
 }
 
-.section button:hover {
-	color : lightGray;
-	background-color : #700000;
+.section button:hover, #resume:hover {
+	color: lightGray;
+	background-color: #700000;
   border: 1px lightgrey solid;
 }
 
+#error{
+  position: fixed;
+  color: lightgrey;
+  width: 100%;
+  height: 100%;
+  z-index: 1000000;
+  padding-top: 200px;
+  background-color: rgba(0, 0, 0, 0.76);
+}
+#error p{
+  width: 298px;
+  border: 1px lightgrey solid;
+  padding: 5px 0;
+  text-align: center;
+  margin: auto;
+}
+#resume{
+  display: block;
+  width: 300px;
+  margin: 10px auto;
+  border: 1px lightgrey solid;
+}
 
+#intro .section{
+  background: transparent;
+  border: none;
+  top: 100px;
+  text-align: center;
+  max-width: none;
+}
+
+#intro .section h1{
+  font-size: 7em;
+  font-family: 'medieval', serif, sans-serif;
+  color: #FFFFFF;
+  text-shadow: 1px 0px 100px #E60000;
+}
+
+#intro .section button{
+  margin: auto;
+}
 
 #inventaire{
   position: absolute;
   left: 0px;
-  padding : 10px 20px;
-  color : white;
-  border-left : 1px solid lightGray;
-  border-right : 1px solid lightGray;
+  padding: 10px 20px;
+  color: white;
+  border-left: 1px solid lightGray;
+  border-right: 1px solid lightGray;
   cursor: pointer;
   background-color: black;
 }
