--- a/css/style.css
+++ b/css/style.css
@@ -564,17 +564,27 @@ section{
   color: lightgrey;
   width: 100%;
   height: 100%;
+  line-height:600px;
+  text-align:center;
   z-index: 1000000;
-  padding-top: 200px;
   background-color: rgba(0, 0, 0, 0.76);
 }
+
+#error .box{
+  width:600px;
+  padding-top: 5px;
+  border:1px solid #fff;
+  vertical-align:middle;
+  display:inline-block;
+  line-height:normal; /* on rétablit le line-height */
+  text-align:left; /* ... et l'alignement du texte */
+}
+
 #error p{
-  width: 298px;
-  border: 1px lightgrey solid;
-  padding: 5px 0;
   text-align: center;
   margin: auto;
 }
+
 #resume{
   display: block;
   width: 300px;
